--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
                   alt="projects image"
                 />
                 <div>
-                  <span class="project-subtitle">Html | Css | Bootstrap</span>
+                  <span class="project-subtitle">Html | Css </span>
 
                   <h1 class="project-title">Travel Destination Page</h1>
                   <a
