--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
                   ></a>
                   <div class="mt-2 github">
                     <a
-                      href="https://github.com/NadiasCodes/Responsive-Add-On-Project"
+                      href="#"
                       target="_blank"
                       class="project-button"
                       >GitHub <i class="bx bxl-github"></i>
