replaced some texts

--- a/projects.html
+++ b/projects.html
@@ -208,17 +208,17 @@
             <div class="col-lg-6 col-sm-12">
               <div class="background-image d-none d-lg-block">
                 <img
-                  src="./src/images/certificate.png"
+                  src="./src/images/react.png"
                   alt="certificate-image"
                   class="project-image d-none d-lg-block"
                 />
               </div>
               <p class="project-description mt-3">
-                Continuously expanding my coding skills by pursuing
-                certifications in frontend development.I'm dedicated to
-                furthering my knowledge and proficiency in coding through
-                various resources, aiming for a comprehensive skill set to excel
-                in future roles within the tech industry.
+                My journey with ReactJS has been immensely fulfilling, and my passion for the framework continues to drive me forward.
+                 With a keen enthusiasm for problem-solving and a commitment to lifelong learning, 
+                 I'm excited to bring my expertise in React to a dynamic team, 
+                 where I can contribute to innovative projects and grow as a developer.
+                 Additionally, I aim to stay updated with the latest developments in React and explore emerging technologies.
               </p>
 
               <p class="mt-2">
@@ -270,7 +270,7 @@
                 <span class="sources">Future Projects:</span>
                 <span class="future-project-ideas-details"
                   >Netflix & Amazon clone, Flower Store, Tea Store,
-                  <br />Clothing Store, Japanese Restaurant, Travel Agency &
+                  <br />Clothing Store, Restaurant, Travel Agency &
                   more.
                 </span>
               </p>
