added some additional information

--- a/about.html
+++ b/about.html
@@ -395,7 +395,7 @@
               This is the perfect course to learn ReactJS if you are a beginner.
               Most programmers agree that the best way to learn a language or a
               technology is to build something. Therefore this course will teach
-              you guys everything you would need to know in order to build your
+              you everything you would need to know in order to build your
               own awesome website.
             </p>
           </div>
