--- a/projects.html
+++ b/projects.html
@@ -254,8 +254,8 @@
               <p class="project-description mt-3">
                 Dedicated to honing my skills, I am actively engaged in building
                 a diverse range of projects. From a multitude of resources
-                including YouTube tutorials and platforms like Frontend Mentor
-                and SheCodes monthly
+                including YouTube tutorials, open sources and platforms like Frontend Mentor
+                and SheCodes challenges.
                 <a
                   href="https://www.shecodes.io/challenges"
                   target="_blank"
