added some additional information

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                 <h2 class="mb-3 front-end">Junior Front-End developer</h2>
                 <p class="mb-4 details-paragraph">
                   Enthusiastic & dedicated junior front-end developer with a
-                  solid foundation in HTML, CSS, JavaScript, and ReactJS.<br />
+                  solid foundation in HTML, CSS, ReactJS & more.<br />
                   Eager to contribute my skills in creating visually appealing
                   and user-friendly web experiences. Always pay attention to
                   details and make sure that my code is clean. Passionate about
@@ -102,10 +102,9 @@
                   <br />
                   I mainly like to pursue personal coding projects in my free
                   time. With whatever time is left (often not much) I love going
-                  for walks, exercising, watching series, reading books &
-                  playing video games. Lastly, I have a deep love for plants.
-                  It's not just a hobby; it's a joyful commitment and
-                  dedication.
+                  for 🚶‍♀️walks, exercising🏋️‍♀️, watching tv-series🎥, reading books📖 &
+                  playing video games🎮. Lastly, I have a deep love for cats🐱 and plants🌱.
+                 
                 </p>
                 <a href="./projects.html" class="main-button"
                   >View my projects</a
@@ -214,24 +213,7 @@
             />
           </div>
         </div>
-        <div class="achievements">
-          <div class="details">
-            <h3 class="mb-4 title-achiev">SheCodes Basics Add-on</h3>
-            <p class="achiev-text">
-              SheCodes Basics Add-on continues your introduction to front-end
-              development and development tools. It teaches new techniques in
-              HTML, CSS and JavaScript to build on the knowledge based in
-              SheCodes Basic.
-            </p>
-          </div>
-          <div class="col-lg-6 d-none d-lg-block">
-            <img
-              src="./src/images/certificates/Introduction to web development.png"
-              class="certificate-image"
-              alt="SheCodes Basics Add-on"
-            />
-          </div>
-        </div>
+        
         <div class="achievements">
           <div class="details">
             <h3 class="mb-4 title-achiev">SheCodes Plus</h3>
@@ -250,6 +232,24 @@
               src="./src/images/certificates/Web Development.png"
               class="certificate-image"
               alt="SheCodes Plus"
+            />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes Basics Add-on</h3>
+            <p class="achiev-text">
+              SheCodes Basics Add-on continues your introduction to front-end
+              development and development tools. It teaches new techniques in
+              HTML, CSS and JavaScript to build on the knowledge based in
+              SheCodes Basic.
+            </p>
+          </div>
+          <div class="col-lg-6 d-none d-lg-block">
+            <img
+              src="./src/images/certificates/Introduction to web development.png"
+              class="certificate-image"
+              alt="SheCodes Basics Add-on"
             />
           </div>
         </div>
