--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
                 <div>
                   <span class="project-subtitle">Html | Css | Bootstrap</span>
 
-                  <h1 class="project-title">Monument Landing Page</h1>
+                  <h1 class="project-title">Monument Landing Page - SheCodes Challenge</h1>
                   <a
                     href="https://monument-landing-page.vercel.app/"
                     class="project-button"
@@ -221,27 +221,7 @@
                  Additionally, I aim to stay updated with the latest developments in React and explore emerging technologies.
               </p>
 
-              <p class="mt-2">
-                <span class="sources">Sources</span>:
-                <a
-                  href="https://www.udemy.com/"
-                  target="_blank"
-                  class="sources-text"
-                  >Udemy,</a
-                >
-                <a
-                  href="https://www.freecodecamp.org/learn/"
-                  target="_blank"
-                  class="sources-text"
-                  >Freecodecamp,</a
-                >
-                <a
-                  href="https://codedamn.com/learn/reactjs-projects"
-                  target="_blank"
-                  class="sources-text"
-                  >Codedamn</a
-                >
-              </p>
+              
             </div>
             <div class="col-lg-6 col-sm-12">
               <div class="background-image d-none d-lg-block">
@@ -255,7 +235,7 @@
                 Dedicated to honing my skills, I am actively engaged in building
                 a diverse range of projects. From a multitude of resources
                 including YouTube tutorials, open sources and platforms like Frontend Mentor
-                and SheCodes challenges.
+                and SheCodes
                 <a
                   href="https://www.shecodes.io/challenges"
                   target="_blank"
