added a new project

--- a/projects.html
+++ b/projects.html
@@ -189,6 +189,33 @@
                   </div>
                 </div>
               </div>
+              <!-- project 5 -->
+              <div class="projects-content swiper-slide">
+                <img
+                  src="./src/images/my-work/project-5.png"
+                  class="project-image-swipper"
+                  alt="projects image"
+                />
+                <div>
+                  <span class="project-subtitle">Html | Css | Bootstrap | JavaScript</span>
+
+                  <h1 class="project-title">Clothing Brand Project</h1>
+                  <a
+                    href="https://shecodes-clothebrand-challenge-project.vercel.app/"
+                    class="project-button"
+                    target="_blank"
+                    >View demo <i class="bx bx-right-arrow-alt"></i
+                  ></a>
+                  <div class="mt-2 github">
+                    <a
+                      href="https://github.com/NadiasCodes/Trendy--Clothing--Brand--Challenge-"
+                      target="_blank"
+                      class="project-button"
+                      >GitHub <i class="bx bxl-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <!-- Swipper pagination -->
