added SEO in titles

--- a/Contact.html
+++ b/Contact.html
@@ -45,7 +45,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/contact.css" />
 
-    <title>Responsive personal portfolio</title>
+    <title>Contact Nadia Bouli</title>
   </head>
   <body>
     <!-- Navigation -->
