--- a/about.html
+++ b/about.html
@@ -44,7 +44,8 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/about.css" />
-    <title>Responsive personal portfolio</title>
+    
+    <title>About the Developer | Nadia Bouli</title>
   </head>
   <body>
     <!-- Navigation -->
