--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/index.css" />
 
-    <title>Responsive personal portfolio</title>
+      <meta
+      name="description"
+      content="Transforming visions into interactive web experiences. Dive into my front-end portfolio showcasing dynamic designs and user-centric interfaces."
+    />
+    <title>Junior Front-End Developer | Nadia Bouli</title>
   </head>
   <body>
     <!-- Navigation -->
@@ -255,7 +259,9 @@
       <a href="mailto:De.Nadia@outlook.com"
         ><h4 class="email">De.Nadia@outlook.com</h4></a
       >
+       
     </footer>
+   
     
     <!-- Scroll Up -->
 
