--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/projects.css" />
 
-    <title>Responsive personal portfolio</title>
+     <title>Dive into the projects from | Nadia Bouli</title>
   </head>
   <body>
     <!-- Navigation -->
