fixing grammar issues

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
           <h2 class="h2-subheader">•Take a look at my favorite Projects•</h2>
           <h5 class="text-center mt-3 links-title">
-            Links available for GitHub repository and a live demo of each
+            Links are available for the GitHub repository and a live demo of each
             project.
           </h5>
         </div>
@@ -119,7 +119,7 @@
                 />
               </div>
               <p class="project-description">
-                Utilizing HTML, CSS, React and API, I've created and designed a
+                Utilizing HTML, CSS, React, and API, I've created and designed a
                 weather app, which gives you the current weather details in a
                 user-friendly design. You can check forecasts effortlessly and
                 plan your day hassle-free with accurate information on
@@ -208,9 +208,9 @@
                 />
               </div>
               <p class="project-description">
-                The world clock app helps you view different time zones anywhere
+                The World Clock app helps you view different time zones anywhere
                 in the world! I developed it, using HTML, CSS, JavaScript and
-                API. It You can effortlessly keep track of multiple location's
+                API.You can effortlessly keep track of multiple location's
                 times, making it convenient for planning across various time
                 zones.
               </p>
