corrected some texts

--- a/Contact.html
+++ b/Contact.html
@@ -45,7 +45,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/contact.css" />
 
-    <title>Contact Nadia Bouli</title>
+    <title>Responsive personal portfolio</title>
   </head>
   <body>
     <!-- Navigation -->
@@ -78,7 +78,7 @@
 
     <main>
       <section class="container-box">
-        <h2 class="contact-header">Contact Me!</h2>
+        <h2 class="contact-header" >Contact Me!</h2>
       </section>
 
       <section class="container-box">
