--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                   learning and improving.
                   <br />
                   <br />
-                  After completing my front-end developer bootcamp and earning my certificate, 
+                  After completing my front-end developer Bootcamp and earning my certificate, 
                   I found a deep affinity for ReactJS. Since then, 
                  <br/> I've dedicated myself to honing my skills and expanding my knowledge of React. 
                  
@@ -103,7 +103,7 @@
                   <br />
                   I mainly like to pursue personal coding projects in my free
                   time. With whatever time is left (often not much) I love going
-                  for 🚶‍♀️walks, exercising🏋️‍♀️, watching tv-series🎥, reading books📖 &
+                  for 🚶‍♀️walks, exercising🏋️‍♀️, watching TV series🎥, reading books📖 &
                   playing video games🎮. Lastly, I have a deep love for cats🐱 and plants🌱.
                  
                 </p>
