--- a/projects.html
+++ b/projects.html
@@ -270,7 +270,7 @@
                   >challenges</a
                 >. I continuously strive to perfect my abilities. With each
                 endeavor, I aim not only to strengthen my existing skills but
-                also explore new concepts and technologies.
+                also to explore new concepts and technologies.
               </p>
 
               <p class="mt-2">
