updated my email preferences

--- a/projects.html
+++ b/projects.html
@@ -309,8 +309,8 @@
         </div>
       </div>
 
-      <a href="mailto:De.Nadia@outlook.com"
-        ><h4 class="email">De.Nadia@outlook.com</h4></a
+      <a href="mailto:nb.dev@hotmail.com"
+        ><h4 class="email">nb.dev@hotmail.com</h4></a
       >
     </footer>
 <!-- Scroll Up -->
