updated the content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <meta
       name="description"
-      content="Transforming visions into interactive web experiences. Dive into my front-end portfolio showcasing dynamic designs and user-centric interfaces."
+      content="Welcome to my portfolio, where I specialize in creating engaging web experiences. Explore user-friendly interfaces and dynamic designs that highlight my front-end expertise."
     />
     <title>Junior Front-End Developer | Nadia Bouli</title>
   </head>
