updated the about me section

--- a/about.html
+++ b/about.html
@@ -103,8 +103,8 @@
                   <br />
                   I mainly like to pursue personal coding projects in my free
                   time. With whatever time is left (often not much) I love going
-                  for 🚶‍♀️walks, exercising🏋️‍♀️, watching TV series🎥, reading books📖 &
-                  playing video games🎮. Lastly, I have a deep love for cats🐱 and plants🌱.
+                  for walks, exercising, watching TV series, reading books &
+                  playing video games. Lastly, I have a deep love for cats and plants.
                  
                 </p>
                 <a href="./projects.html" class="main-button"
