--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                   <br />
                   I mainly like to pursue personal coding projects in my free
                   time. With whatever time is left (often not much) I love going
-                  for walks, exercising, improving my german, watching TV series, reading books &
+                  for walks, exercising, improving my German, watching TV series, reading books &
                   playing video games. Lastly, I have a deep love for cats and plants.
                  
                 </p>
