--- a/Contact.html
+++ b/Contact.html
@@ -78,7 +78,7 @@
 
     <main>
       <section class="container-box">
-        <h2 class="contact-header" >Contact Me!</h2>
+        <h2 class="contact-header">Contact Me!</h2>
       </section>
 
       <section class="container-box">
@@ -86,8 +86,9 @@
           <p class="contact-text">Thank you for visiting my portfolio!</p>
 
           <p class="second-paragraph">
-            If you would like to discuss my experience and projects further,
-            please don't hesitate to contact me. I would love to hear from you.
+            I'm looking forward to collaborating with you and welcome any
+            feedback or inquiries you may have.<br />
+            I would be more than happy to discuss further during an interview.
           </p>
         </div>
         <div class="contact-links">
