--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
                   Enthusiastic & dedicated junior front-end developer with a
                   solid foundation in HTML, CSS, ReactJS & more.<br />
                   Eager to contribute my skills in creating visually appealing
-                  and user-friendly web experiences. Always pay attention to
-                  details and make sure that my code is clean. Passionate about
+                  and user-friendly web experiences. Always paying attention to
+                  details and making sure that my code is clean. Passionate about
                   learning and improving.
                   <br />
                   <br />
