--- a/about.html
+++ b/about.html
@@ -101,9 +101,8 @@
                   allowing me to delve into advanced concepts and solidify my understanding.
                     <br />
                   <br />
-                  I mainly like to pursue personal coding projects in my free
-                  time. With whatever time is left (often not much) I love going
-                  for walks, exercising, improving my German, watching TV series, reading books &
+                  During my free time, I mainly like to pursue personal coding projects.
+                  Aside that, I love going for walks, exercising, improving my German skills, watching TV series, reading books &
                   playing video games. Lastly, I have a deep love for cats and plants.
                  
                 </p>
