--- a/about.html
+++ b/about.html
@@ -85,12 +85,13 @@
                 <h1 class="mb-4 title">Hi, I am Nadia</h1>
                 <h2 class="mb-3 front-end">Junior Front-End developer</h2>
                 <p class="mb-4 details-paragraph">
-                  Enthusiastic & dedicated junior front-end developer with a
-                  solid foundation in HTML, CSS, ReactJS & more.<br />
+                 Enthusiastic & dedicated junior front-end developer with a
+                  solid foundation in HTML5, CSS3, ReactJS & Responsive Web Design.<br />
                   Eager to contribute my skills in creating visually appealing
                   and user-friendly web experiences. Always paying attention to
                   details and making sure that my code is clean. Passionate about
-                  learning and improving.
+                  learning and improving. I am flexible and I would be willing to relocate for new opportunities.
+                  
                   <br />
                   <br />
                   After completing my front-end developer Bootcamp and earning my certificate, 
@@ -154,7 +155,7 @@
          
           <div class="col-lg mb-4">
             <i class="bx bxl-visual-studio icon-skill"></i>
-            <p class="icon-skill-text">Visual Studio</p>
+            <p class="icon-skill-text">Visual Studio Code</p>
           </div>
         </div>
         <div class="row mt-4">
